objects/Call__c.object
<CustomObject>
    <fields>
        <fullName>Feature_Discussed__c</fullName>
        <label>Feature Discussed</label>
        <picklist>
            <controllingField>Call_Type__c</controllingField>
            <picklistValues>
                <fullName>On-Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Tactic Run</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Physician engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Coding and Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Attribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Medical Director Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Length of Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Readmissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Surgical Standardization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Sepsis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - CVA (Radiology Usage)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Sickle Cell Anemia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Total Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - AMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Palliative Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - OPPE Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Value Based Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playbook - Systemness</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_10_Completed__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 10 - Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_2_Add_Information_Req__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 2 - Add. Information Req.</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_3_Assigned__c</fullName>
        <description>Created for CR-20160309-9689</description>
        <label>First Moved to 3 - Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_4_Drafting__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 4 - Drafting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_5_Out_For_Review__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 5 - Out For Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_6_Incorporating_Edits__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 6 - Incorporating Edits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_7_Dev_Internal_Review__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 7 - Dev Internal Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_8_Legal_Review__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 8 - Legal Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Moved_to_9_Submitted_for_Approval__c</fullName>
        <description>Created for CR-20160309-9689.</description>
        <label>First Moved to 9-Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Implementation_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150311-8751</description>
        <label>Implementation Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Implementation Lead)</relationshipLabel>
        <relationshipName>Member_Interactions8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Notes__c</fullName>
        <inlineHelpText>Please document any delays or concerns that occurred during the implementation phase.</inlineHelpText>
        <label>Implementation Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Important_Market_Definitions__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Important Market Definitions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Important_Platform_Configuration_Nuances__c</fullName>
        <description>Used to document notes about site-specific configuration. 
Created for CR-20160105-9490</description>
        <label>Important Platform Configuration/Nuances</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Important_University_Terms_or_Acronyms__c</fullName>
        <description>Created for CR-20160105-9490</description>
        <label>Important University Terms or Acronyms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiatives_of_Interest__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Initiatives of Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Member Interactions</relationshipLabel>
        <relationshipName>Member_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interaction_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interaction Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Grade__c</fullName>
        <description>CR-20120208-419</description>
        <label>Interaction Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Readiness Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practicum Coaching Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practicum Webinar Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results Walkthrough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Health Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Cycle Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent - Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB Trainer Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Coordinating_Member_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150311-8751</description>
        <label>Key Coordinating Member Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Key Coordinating Member Contact)</relationshipLabel>
        <relationshipName>Member_InteractionsunNz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Executive_Project_Sponsor_Update__c</fullName>
        <formula>Member__r.date_last_sponsor_update__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Executive Project Sponsor Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Onsite_Date_and_Grade__c</fullName>
        <label>Last Onsite Date and Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Board Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Login_Password__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Login/Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Point_of_Contact__c</fullName>
        <inlineHelpText>Name, Email, Phone</inlineHelpText>
        <label>Main Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Attendee_Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Attendee: Other</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Member Attendee: Other)</relationshipLabel>
        <relationshipName>Member_Interactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Materials_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Materials Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Member Materials Contact)</relationshipLabel>
        <relationshipName>Member_InteractionsPGm1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>Member__r.Institution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Proficiency_GPA__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Member Proficiency GPA</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Proficiency__c</fullName>
        <description>A drop-down GPA type field where trainer can rate the member’s responsiveness to material and proficiency in tool. Created for CR-20160105-9490</description>
        <label>Member Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Requested_Start_Date__c</fullName>
        <label>Member Requested Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Member Interactions</relationshipLabel>
        <relationshipName>Sponsor_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Member Interactions</relationshipLabel>
        <relationshipName>Member_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modules_Purchased__c</fullName>
        <formula>IF( Member__r.Inpatient__c, &quot;Inpatient ; &quot;, &quot; ; &quot;) &amp; IF(Member__r.OPPE__c, &quot;OPPE ; &quot;, &quot;; &quot;) &amp; IF(Member__r.Outpatient__c, &quot;Outpatient ; &quot;, &quot; ; &quot;) &amp; IF( Member__r.Guidelines__c , &quot;Guidelines : &quot;, &quot; ; &quot;) &amp; IF ( Member__r.Clinical_Integration__c , &quot;Clinical Integration ; &quot;, &quot; ; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modules Purchased</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_product_training_Needed_Notes__c</fullName>
        <description>Created for CR-20150311-8751</description>
        <label>Multi-product training Needed (Notes)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_BA_Introduced__c</fullName>
        <label>New BA Introduced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_DA_Introduced__c</fullName>
        <label>New DA Introduced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_DA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New DA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Interactions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Attendees__c</fullName>
        <description>Created for CR-20160210-9595</description>
        <label>No. of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Physicians_Being_Trained_Times__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>No. of Participants Being Trained/Times</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Requester__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created as part of CR 3694</description>
        <inlineHelpText>Checking this box will turn on automatic notifications sent to the requester whenever the status of this request is updated.</inlineHelpText>
        <label>Notify Requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Beds__c</fullName>
        <formula>Member__r.Total_Licensed_Beds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Confirmed_Attendees__c</fullName>
        <label>Number of Confirmed Attendees</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Hospitals__c</fullName>
        <formula>Member__r.Number_of_Hospitals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Hospitals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Manuals__c</fullName>
        <label>Number of Manuals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPPE_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20150311-8751</description>
        <label>OPPE Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (OPPE Lead)</relationshipLabel>
        <relationshipName>Member_InteractionsunSa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_site_Grade__c</fullName>
        <inlineHelpText>A-Engaged, attendance strong, clear goals
B-Semi-engaged, attendance strong, clear goals, uncertain on follow-up
C-Unengaged, attendance limited, unclear goals, low confidence for progress
F-Unengaged, no goals, unclear next steps</inlineHelpText>
        <label>On-site Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner: Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of CR 3694</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Engagement Letter Requests</relationshipLabel>
        <relationshipName>Member_Interactions11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option_1_End__c</fullName>
        <label>Option 1 End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Option_1_Start__c</fullName>
        <label>Option 1 Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Option_2_End__c</fullName>
        <label>Option 2 End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Option_2_Start__c</fullName>
        <label>Option 2 Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Option_3_End__c</fullName>
        <label>Option 3 End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Option_3_Start__c</fullName>
        <label>Option 3 Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_BA__c</fullName>
        <inlineHelpText>This field contains the value of the Project field &quot;Production Business Analyst&quot; from when this Member Transition record was created. It is populated via workflow.</inlineHelpText>
        <label>Original BA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_DA__c</fullName>
        <inlineHelpText>This field contains the value of the Project field &quot;Dedicated Advisor&quot; from when this Member Transition record was created. It is populated via workflow.</inlineHelpText>
        <label>Original DA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Tools__c</fullName>
        <description>Created for CR-20160105-9490</description>
        <label>Other Competitive Tools</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Details__c</fullName>
        <description>created as part of CR 3694</description>
        <inlineHelpText>Please list any other relevant details (i.e. scope, budget, mgmt., team, situation, etc.)</inlineHelpText>
        <label>Other Relevant Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Training_Grade__c</fullName>
        <description>A drop-down GPA type field where member overall training rating from Post-Eval will be recorded. Created for CR-20160105-9490</description>
        <label>Overall Training Grade</label>
        <picklist>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIC_Course__c</fullName>
        <label>PIC Course</label>
        <picklist>
            <picklistValues>
                <fullName>Auto-Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calc Engine Basics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calc Engine Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresher CE Basics/Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts and Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory and Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loading Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loading Tricare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Basics Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Basics IPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Basics IRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Basics Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Basics SNF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modeling Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modeling Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Non-Training)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Calc Engine Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Recovery for Frontline Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery for Frontline Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery for Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresher Inst RRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tricare Basics Inpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tricare Basics Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC 101 =DO NOT USE=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC 101 for Security Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC 101 for Revenue Recovery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Detractor_Filter__c</fullName>
        <description>Used for reports and dashboards. Detractor = 1</description>
        <formula>IF(QA_Call_Recommend_Grade__c &lt;=6, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT: Detractor Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Promoter_Filter__c</fullName>
        <formula>IF(QA_Call_Recommend_Grade__c &gt;=9, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT: Promoter Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_UAT_Data_Issues__c</fullName>
        <inlineHelpText>Please document any pending UAT issues that have not been resolved and that will impact onsite training.</inlineHelpText>
        <label>Pending UAT Data Issues</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Created as part of CR-3833</description>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Champion_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the Clinical Leader attend this training?</inlineHelpText>
        <label>Clinical Leader Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Leader</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Interactions (Physician Champion)</relationshipLabel>
        <relationshipName>Member_Interactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physicians_of_Interest__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Physicians of Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Wire_Documentation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Wire Documentation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Wire_Meeting_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Trainers are expected to schedule a post wire meeting with DAs 72 hours post onsite if the onsite has many concerns.</inlineHelpText>
        <label>Post Wire Meeting Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Wire_Documentation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DAs are to check this box once all the data points in the pre-wire documentation have been completed.</inlineHelpText>
        <label>Pre-Wire Documentation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Wire_Meeting_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DAs to only check once a 30-minute pre-wire meeting has been scheduled with the assigned trainer. DAs will be expected to update this portion of the ticket once a Trainer has been assigned and a meeting has been scheduled at least 1 week prior to onsite.</inlineHelpText>
        <label>Pre-Wire Meeting Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Engagement_Objective__c</fullName>
        <description>created as part of CR 3694</description>
        <inlineHelpText>Please list the primary objective of this engagement</inlineHelpText>
        <label>Primary Engagement Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Roster__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Primary Roster</label>
        <picklist>
            <picklistValues>
                <fullName>Member Roster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMS Roster</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priorities_Challenges_Sensitive_Topics__c</fullName>
        <description>Created as a part of CR 3884</description>
        <label>Priorities/Challenges/Sensitive Topics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Created as part of CR-3833</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Development_Notes__c</fullName>
        <description>CR-20120227-505</description>
        <label>Product Development Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Feedback_Notes__c</fullName>
        <label>Product Feedback Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Member__r.Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
</CustomObject>